--- a/WypozyczalniaGierWideo/Views/Gra/Create.cshtml
+++ b/WypozyczalniaGierWideo/Views/Gra/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model WypozyczalniaGier.Models.Gra
+﻿@model WypozyczalniaGier.ViewModels.GraViewModel
 
 <!DOCTYPE html>
 <html lang="pl">
@@ -89,7 +89,6 @@
 
     @section Scripts {
         <partial name="_ValidationScriptsPartial" />
-
     }
 </body>
 </html>
