--- a/WypozyczalniaGierWideo/Views/Uzytkownik/Index.cshtml
+++ b/WypozyczalniaGierWideo/Views/Uzytkownik/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WypozyczalniaGier.Models.Uzytkownik>
+﻿@model IEnumerable<WypozyczalniaGier.ViewModels.UzytkownikViewModel>
 
 <!DOCTYPE html>
 <html lang="pl">
