--- a/WypozyczalniaGierWideo/Views/Wypozyczenie/Create.cshtml
+++ b/WypozyczalniaGierWideo/Views/Wypozyczenie/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model WypozyczalniaGier.Models.Wypozyczenie
+﻿@model WypozyczalniaGier.ViewModels.WypozyczenieViewModel
 
 <!DOCTYPE html>
 <html lang="pl">
