--- a/WypozyczalniaGierWideo/Views/Gra/Index.cshtml
+++ b/WypozyczalniaGierWideo/Views/Gra/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WypozyczalniaGier.Models.Gra>
+﻿@model IEnumerable<WypozyczalniaGier.ViewModels.GraViewModel>
 
 <!DOCTYPE html>
 <html lang="pl">
@@ -170,7 +170,7 @@
     <script>
         function checkAvailability(graId) {
             fetch('@Url.Action("CheckAvailability")' + '?id=' + graId)
-                .then(response => response.json())a
+                .then(response => response.json())
                 .then(data => {
                     document.getElementById('availability-' + graId).innerHTML =
                         data.available ? 'Dostępna' : 'Wypożyczona';
