--- a/WypozyczalniaGierWideo/Views/Uzytkownik/Delete.cshtml
+++ b/WypozyczalniaGierWideo/Views/Uzytkownik/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model WypozyczalniaGier.Models.Uzytkownik
+﻿@model WypozyczalniaGier.ViewModels.UzytkownikViewModel
 
 <!DOCTYPE html>
 <html lang="pl">
