--- a/WypozyczalniaGierWideo/Views/Gra/Create.cshtml
+++ b/WypozyczalniaGierWideo/Views/Gra/Create.cshtml
@@ -90,5 +90,9 @@
     @section Scripts {
         <partial name="_ValidationScriptsPartial" />
     }
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation-unobtrusive@4.0.0/dist/jquery.validate.unobtrusive.min.js"></script>
+
 </body>
 </html>
